tests/ui/errors/snapshots/parse_error_recovery_enum_def.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:3]
 3 │   Ok,
 4 │   ^
   ·   ┬
   ·   ╰── expected variant name
 5 │   Error,
   ╰────
  help: Variant names must be identifiers · code: [parse.syntax_error]
